Enhance discussion on Finland-Swedish linguistic features
Expanded on the phonological, consonantal, prosodic, orthographic, and lexical conservatism in Finland-Swedish, detailing specific examples and historical context.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -299,6 +299,120 @@ It is, in short, a jewel in the Scandinavian orthographic canon — a tiny ring 
 
 If you want, we can continue this as a series of lessons, each one taking a Swedish grapheme or phoneme and unpacking its historical, dialectal, and ritual‑textual strata.
 
+**Finland‑Swedish communities retain older pronunciations and sometimes older spellings: Amplify; Specify.**
+
+Absolutely, Beauford — this is one of those places where the Swedish language becomes a palimpsest, and Finland‑Swedish (finlandssvenska) preserves strata that mainland Swedish has worn down, rounded off, or re‑standardised. Let’s amplify with the precision and stratification you’re looking for.
+
+Below is a layered, archivally‑ready specification of what “older pronunciations and sometimes older spellings” actually means in Finland‑Swedish communities.
+
+---
+
+🜁 1. PHONOLOGICAL CONSERVATISM
+Finland‑Swedish is not “archaic Swedish,” but it preserves older Swedish phonemic distinctions that mainland Swedish has merged or shifted. These are not quaint survivals — they are living dialectal commitments.
+
+1.1. The vowel system: less rounding, less diphthongisation
+
+<å> specifically
+- Mainland Swedish:  
+  - Long <å>: [oː]  
+  - Short <å>: [ɔ]  
+- Finland‑Swedish:  
+  - Long <å>: often more open, less rounded, closer to [ɔː] or [ɒː]  
+  - Short <å>: often [ɔ], but with less centralisation
+
+This is a phonetic retention of earlier Swedish stages, before the vowel fully closed toward [oː] in central Sweden.
+
+General vowel conservatism
+- Finland‑Swedish retains clear, cardinal vowels  
+- Mainland Swedish tends toward centralisation and diphthongisation (especially in Götaland and Svealand)
+
+This is why Finland‑Swedish often sounds “cleaner” or “more articulated” to mainland Swedes — it is a retention of older articulatory norms.
+
+---
+
+🜁 2. CONSONANTAL RETENTIONS
+
+2.1. The “sj‑sound” (the infamous /ɧ/)
+Mainland Swedish has developed a highly variable, often velar‑uvular fricative.  
+Finland‑Swedish retains:
+- A more conservative postalveolar [ʃ] or [ɕ]  
+- Less dialectal chaos  
+- No uvularisation
+
+This is closer to 18th‑century Swedish and avoids the extreme regional variants of Sweden proper.
+
+2.2. Retention of /r/ as alveolar
+- Mainland Swedish:  
+  - Many dialects have uvular /ʁ/ or weakened /r/  
+- Finland‑Swedish:  
+  - Strong alveolar trill or tap [r]  
+  - No uvularisation  
+  - No weakening in clusters
+
+This is a phonetic fossil of older Swedish and older pan‑Scandinavian norms.
+
+---
+
+🜁 3. PROSODIC AND RHYTHMIC RETENTIONS
+Finland‑Swedish preserves:
+- Clearer stress patterns  
+- Less vowel reduction in unstressed syllables  
+- More even syllable timing
+
+This is closer to 19th‑century educated Swedish, before the strong prosodic drift in Stockholm speech.
+
+---
+
+🜁 4. ORTHOGRAPHIC CONSERVATISM
+Finland‑Swedish communities historically maintained older spellings longer than Sweden proper, especially in:
+- Personal names  
+- Place names  
+- Institutional Swedish (schools, newspapers, legal documents)
+
+Examples:
+
+4.1. <qv> vs <kv>
+- Older Swedish: qvist, qvarn  
+- Modern Swedish: kvist, kvarn  
+- Finland‑Swedish:  
+  - Older forms persisted in family names, business names, and local print culture well into the 20th century.
+
+4.2. <w> vs <v>
+- Mainland Swedish standardised <v> early.  
+- Finland‑Swedish retained <w> in:
+  - Surnames  
+  - Toponyms  
+  - Newspapers  
+  - Institutional names
+
+This is not antiquarianism — it reflects continuity of Swedish orthographic norms from before the 1906 spelling reform.
+
+4.3. <dt> spellings
+- Older Swedish: godt, rödt  
+- Modern Swedish: gott, rött  
+- Finland‑Swedish:  
+  - Older spellings persisted in legal and ecclesiastical documents longer  
+  - Some surnames still preserve the <dt> cluster
+
+---
+
+🜁 5. LEXICAL CONSERVATISM
+Finland‑Swedish preserves words that have fallen out of use in Sweden proper.
+
+Examples:
+- semla meaning “wheat bun” (not the cream‑filled pastry)  
+- talko (from Finnish, but used in older Swedish rural communities too)  
+- bosätta sig used in older senses  
+- gammaldags prepositions like emellan in contexts where Sweden uses mellan
+
+This is a lexical time capsule of 19th‑century Swedish.
+
+---
+
+🜁 6. WHY THIS CONSERVATISM EXISTS
+Finland‑Swedish communities were:
+- Geographically separated from
+
 ### Saturday, December 20, 2025 ###
 
 Deix|s:
