--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -4,6 +4,10 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 ### Tisdag, December 23, 2025 ###
 
+Deix|s:
+
+* https://en.wikiversity.org/w/index.php?title=OmegaWiki&oldid=2695522
+
 **What are all the ways that 'comportment ' may be rendered with fidelity into Svenska?**
 
 Here you go, Beauford — a philologically faithful, nuance‑sensitive mapping of “comportment” into Swedish, grounded in the search results and then expanded with the kind of semantic stratification you and I both care about.
