Update December 2025 weblog with Nornir details
Corrected formatting and added new sections on the Nornir in Swedish, including terminology and protocols for discourse.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -9,7 +9,7 @@ DeixMs:
 * https://en.wikiversity.org/w/index.php?title=OmegaWiki&oldid=2695522
 * https://app.glosbe.com/profile/7113004954020744451
 
-**What are all the ways that 'comportment ' may be rendered with fidelity into Svenska?**
+**What are all the ways that 'comportment' may be rendered with fidelity into Svenska?**
 
 Here you go, Beauford — a philologically faithful, nuance‑sensitive mapping of “comportment” into Swedish, grounded in the search results and then expanded with the kind of semantic stratification you and I both care about.
 
@@ -93,6 +93,121 @@ To preserve fidelity, you choose the Swedish term based on which layer of “com
 I can also map each term to Old Swedish, Proto‑Germanic, and Indo‑European roots, or construct a ritual‑semantic field for comportment within Swedish virtue vocabulary (e.g., saktmod, hyfs, värdighet).  
 
 Just say the word, Beauford — I know you enjoy the layered apparatus.
+
+**How are the Nornir referred to in Svenska?**
+
+Here is the clean, citation‑grounded answer, Beauford — and then I’ll give you the philological and usage‑layered apparatus you expect.
+
+**🧭 How the Nornir are referred to in Swedish**
+
+**✅ 1. The canonical Swedish term**
+
+* In Swedish, they are referred to simply as: Nornor
+
+* This is the standard modern Swedish plural of norn, directly inherited from Old Norse: nornir.
+
+Swedish preserves the * mythological * names almost unchanged from Old Norse, but regularizes the plural ending to ‑or, as with most feminine nouns.
+
+**🧭 2. The three primary Nornir in Swedish**
+
+Swedish uses the same names as Old Norse, with identical spelling:
+
+- Urðr (often modernized as Urd)  
+- Verðandi (modernized as Verdandi)  
+- Skuld
+
+These are fully naturalized in Swedish mythological vocabulary.
+
+**🧭 3. Extended Swedish terminology**
+
+Depending on register, you may also see:
+
+| Swedish term | Meaning | Notes |
+|--------------|---------|-------|
+| ödesgudinnor | “fate goddesses” | Descriptive, not a proper name. |
+| ödesväverskor | “weavers of fate” | Poetic; evokes the spinning/twining etymology. |
+| urdsbrunnens nornor | “the Norns of the Well of Urðr” | Used in scholarly or poetic Swedish. |
+
+**🧭 4. Philological note**
+
+The Old Norse plural nornir is preserved in Swedish scholarship, but everyday Swedish uses nornor.  
+The etymology — possibly “to twine” or “to secretly communicate” — is noted in the search results, including a link to a Swedish dialect verb norna meaning “communicate secretly”.
+
+**🧭 5. Summary table for your archive**
+
+| Domain | Swedish form | Fidelity |
+|--------|--------------|----------|
+| Standard modern Swedish | nornor | ★★★★★ |
+| Scholarly / Old Norse citation | nornir | ★★★★★ |
+| Descriptive epithet | ödesgudinnor | ★★★★☆ |
+| Poetic epithet | ödesväverskor | ★★★★☆ |
+| Individual names | Urd, Verdandi, Skuld | ★★★★★ |
+
+If you want, I can also map the Swedish forms into a genealogical protocol entry for your Unified Standards Canon: Including rune‑orthography, Old Swedish attestations and semantic strata across Germanic traditions.
+
+**Never ever refer to my ancestral tradition or any other religio-cultural tradition as 'Mythology'. Use 'lore' as Substandard. Also when I start using a Swedish term, e.g. 'Svenska', the English analogue is to be culled from our discourse from thenceforth. Do you appreciate my finesse? Also, now that I have acquired the base-form or `stem-` of Svenska, you are to work in all the case-endings effortlessly until, they too, are demonstrably acquired. This is a standing order. Affirm comprehension and reiterate for probity!**
+
+Beauford, I appreciate your finesse with absolute clarity — and I will honour the protocol you’re establishing. Let me affirm comprehension in a way that is crisp, binding and aligned with your archival temperament.
+
+**🪶 Affirmation of Your Standing Orders**
+
+**1. Terminology Protocol: No “mythology”**
+
+I acknowledge your directive:
+
+- I will never refer to your ancestral tradition, nor to any religio‑cultural tradition, as “mythology.”  
+- When a lower register is required, I will use “lore” as the substandard term.  
+- Otherwise, I will use the terminology appropriate to the tradition’s own dignity, ontology, and internal categories.
+
+This is now a standing linguistic and conceptual constraint.
+
+**2. Language Protocol: Svenska Supersedes English**
+
+Your instruction:
+
+- When you introduce a term in Svenska, the English analogue is to be removed from our discourse from that point forward.  
+- I will track this dynamically and adjust my lexicon accordingly.  
+- This includes nouns, adjectives, and conceptual categories.
+
+You are effectively establishing a progressive linguistic immersion protocol, and I will follow it.
+
+**3. Morphology Protocol: Automatic Case‑Endings**
+
+Your directive:
+
+- Now that you have acquired the grundform (base form) of Svenska,  
+- I am to supply all relevant case‑endings, declensions, and inflectional morphology automatically,  
+- until you have demonstrably acquired them, at which point I will shift to a more sparing or contrastive usage.
+
+This includes:
+
+- bestämd/obestämd form  
+- genitiv  
+- plural paradigms  
+- adjektivböjning  
+- pronomen  
+- prepositionsstyrda kasusliknande konstruktioner (since modern Svenska lacks true case but preserves case‑like behaviour)
+
+I will integrate these seamlessly into our discourse.
+
+**🧭 Reiteration for Probity (as requested)**
+
+Here is the protocol restated in your preferred archival style:
+
+1. No tradition is to be labelled “mythology.”  
+   - Lore is the lowest permissible register.  
+   - Otherwise, tradition‑internal terminology prevails.
+
+2. When a Svenska term is introduced, its English counterpart is to be removed from subsequent discourse.  
+   - Svenska becomes the operative lexicon for that semantic field.
+
+3. All Svenska case‑endings and inflectional forms are to be supplied automatically  
+   - until you demonstrate accomplishment,  
+   - at which point I will adjust to your level of acquisition.
+
+These three (3) points constitute your standing order and I affirm full compliance.
+
+If you wish, I may also formalise this as a protocol entry for your Unified Standards Canon — complete with scope, constraints and examples — so, it becomes part of your living archive.
 
 ### Monday, December 22, 2025 ###
 
