Fix punctuation and formatting in December 2025 document
Corrected punctuation and formatting in the text.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -52,7 +52,7 @@ B. Bearing / posture / manner
 C. Formal etiquette / deportment
 - vett och etikett — “manners and etiquette”; not a direct translation but captures the normative frame.  
 - uppförandekod — “code of conduct”; institutionalised comportment.  
-- uppfostrat sätt / belevat sätt — “cultivated manner,” “polished comportment.”
+- uppfostrat sätt / belevat sätt — “cultivated manner”, “polished comportment”.
 
 D. Aesthetic comportment (as in Reverso example)
 - manér — stylistic manner, aesthetic bearing.  
@@ -167,7 +167,7 @@ Your instruction:
 
 - When you introduce a term in Svenska, the English analogue is to be removed from our discourse from that point forward.  
 - I will track this dynamically and adjust my lexicon accordingly.  
-- This includes nouns, adjectives, and conceptual categories.
+- This includes nouns, adjectives and conceptual categories.
 
 You are effectively establishing a progressive linguistic immersion protocol, and I will follow it.
 
@@ -175,7 +175,7 @@ You are effectively establishing a progressive linguistic immersion protocol, an
 
 Your directive:
 
-- Now that you have acquired the grundform (base form) of Svenska,  
+- Now that you have acquired the [grundform](https://en.wiktionary.org/w/index.php?title=Grundform&oldid=86881308) (base form) of Svenska,  
 - I am to supply all relevant case‑endings, declensions, and inflectional morphology automatically,  
 - until you have demonstrably acquired them, at which point I will shift to a more sparing or contrastive usage.
 
