Update December 2025 entry with publisher details
Added information about Scandinavian University Press.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -4,6 +4,10 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 ### Tisdag, December 23, 2025 ###
 
+Superlaᛏ|v Deix|ᛋ
+
+* Scandinavian University Press (formerly known as \\|/Idunn\\|/) is an academic publisher, publishing scholarly journals, monographs and edited collections in the fields of humanities, social sciences and natural sciences.
+
 DeixMs:
 
 * https://en.wikiversity.org/w/index.php?title=OmegaWiki&oldid=2695522
