--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -6,7 +6,7 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 Superlaᛏ|v Deix|ᛋ
 
-* [Universitetsforlaget](https://en.wikipedia.org/w/index.php?title=Universitetsforlaget&oldid=1275662208) ([Engelska](https://en.wiktionary.org/w/index.php?title=engelska&oldid=82236732): Scandinavian University Press) (formerly known as \\|/Idunn\\|/) is an academic publisher, publishing scholarly journals, monographs and edited collections in the fields of humanities, social sciences and natural sciences.
+* [Universitetsforlaget](https://en.wikipedia.org/w/index.php?title=Universitetsforlaget&oldid=1275662208) ([Engelska](https://en.wiktionary.org/w/index.php?title=engelska&oldid=82236732): Scandinavian University Press) (formerly known as \\|/[Idunn](https://en.wikipedia.org/w/index.php?title=I%C3%B0unn&oldid=1299098484)\\|/) is an academic publisher, publishing scholarly journals, monographs and edited collections in the fields of humanities, social sciences and natural sciences.
 
 DeixMs:
 
